--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td><img src="images\rezwan.jpg" alt="Rezwan picture"></td>
+      <td><img src="rezwan.jpg" alt="Rezwan picture"></td>
     <td><h1><a href="https://www.facebook.com/abulhasnat.mohammadrezwan.92">Abul Hasnat Mohammad Rezwan</a></h1>
     <p>
       <em>Sub-Divisional Engineer of <strong><a href="http://www.bpdb.gov.bd/">BPDB</a></strong> </em>
@@ -89,7 +89,7 @@
 </table>
 <hr>
   <p>
-    <img src="images\arabi.jpg" alt="Rezwan's wife">
+    <img src="arabi.jpg" alt="Rezwan's wife">
   </p>
 
 </body>
